--- a/src/Management.Dashboard/Management.Dashboard.Api/Management.Dashboard.Api.csproj
+++ b/src/Management.Dashboard/Management.Dashboard.Api/Management.Dashboard.Api.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>cdaf78d2-3044-48d5-b4f9-b63fd0c6cbe4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
