--- a/src/Management.Dashboard/Management.Dashboard.Services/Management.Dashboard.Services.csproj
+++ b/src/Management.Dashboard/Management.Dashboard.Services/Management.Dashboard.Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.15.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.0" />
   </ItemGroup>
 
   <ItemGroup>
