--- a/src/Management.Dashboard/Management.Dashboard.Services/Management.Dashboard.Services.csproj
+++ b/src/Management.Dashboard/Management.Dashboard.Services/Management.Dashboard.Services.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Management.Dashboard.Common\Management.Dashboard.Common.csproj" />
     <ProjectReference Include="..\Management.Dashboard.Models\Management.Dashboard.Models.csproj" />
     <ProjectReference Include="..\Management.Dashboard.Repositories\Management.Dashboard.Repositories.csproj" />
   </ItemGroup>
