--- a/src/Management.Dashboard/Management.Dashboard.Api/appsettings.json
+++ b/src/Management.Dashboard/Management.Dashboard.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "MongoSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://admin:FednllljRdYD5A48@cluster0.ibxrkfg.mongodb.net/",
     "DatabaseName": "TenantAdmin",
     "CollectionName": "Tenants"
   },
