--- a/src/Management.Dashboard/Management.Dashboard.Api/Management.Dashboard.Api.csproj
+++ b/src/Management.Dashboard/Management.Dashboard.Api/Management.Dashboard.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,11 +7,9 @@
     <UserSecretsId>cdaf78d2-3044-48d5-b4f9-b63fd0c6cbe4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-    <AWSProjectType>Lambda</AWSProjectType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.6.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
@@ -19,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Management.Dashboard.Common\Management.Dashboard.Common.csproj" />
+    <ProjectReference Include="..\Management.Dashboard.Common\Management.Dashboard.Common.csproj" />
     <ProjectReference Include="..\Management.Dashboard.Models\Management.Dashboard.Models.csproj" />
     <ProjectReference Include="..\Management.Dashboard.Services\Management.Dashboard.Services.csproj" />
   </ItemGroup>
