--- a/src/Management.Dashboard/Management.Dashboard.Api/appsettings.json
+++ b/src/Management.Dashboard/Management.Dashboard.Api/appsettings.json
@@ -7,8 +7,14 @@
   },
   "MongoSettings": {
     "ConnectionString": "mongodb+srv://admin:FednllljRdYD5A48@cluster0.ibxrkfg.mongodb.net/",
+    //"ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "TenantAdmin",
     "CollectionName": "Tenants"
+  },
+  "JwtSettings": {
+    "SigningKey": "asddfgf645646ygjg8867jkhkjhjsdvv234234^&%&^%&^hjsdfb2%%%",
+    "Audience": "https://dashboard.onscreensync.com",
+    "Issuer": "https://dashboard.onscreensync.com"
   },
   "AllowedHosts": "*"
 }
