--- a/.github/workflows/main_oss-dashboardapi.yml
+++ b/.github/workflows/main_oss-dashboardapi.yml
@@ -23,8 +23,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
-        working-directory: src
+        run: dotnet build src/Management.Dashboard/Management.Dashboard.sln --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
