--- a/src/Management.Dashboard/Management.Dashboard.Services/Management.Dashboard.Services.csproj
+++ b/src/Management.Dashboard/Management.Dashboard.Services/Management.Dashboard.Services.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.304.13" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.305.24" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.15.0" />
     <PackageReference Include="BCrypt.Net" Version="0.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Management.Dashboard.Common\Management.Dashboard.Common.csproj" />
     <ProjectReference Include="..\Management.Dashboard.Exceptions\Management.Dashboard.Exceptions.csproj" />
     <ProjectReference Include="..\Management.Dashboard.Models\Management.Dashboard.Models.csproj" />
+    <ProjectReference Include="..\Management.Dashboard.Notification\Management.Dashboard.Notification.csproj" />
     <ProjectReference Include="..\Management.Dashboard.Repositories\Management.Dashboard.Repositories.csproj" />
   </ItemGroup>
 
